
VERSION 0.7.2cvs
================

2005-10-04  Vincent Richard  <vincent@vincent-richard.net>

 * net/service: removed "server.socket-factory" property; added the
   service::setSocketFactory() function instead. Removed "name" parameter
   from platformDependant::getSocketFactory() function.

2005-10-03  Vincent Richard  <vincent@vincent-richard.net>

 * Added TLS/SSL support, using GNU TLS library.

2005-09-17  Vincent Richard  <vincent@vincent-richard.net>

 * Added SASL support, based on GNU SASL library. Slightly modified
   auhenticator object; see 'example6' which has been updated.

2005-09-06  Vincent Richard  <vincent@vincent-richard.net>

 * Created 'vmime::security' and 'vmime::security::digest' namespaces.
   MD5 has been moved here. Added SHA-1 hash algorithm.

2005-09-03  Vincent Richard  <vincent@vincent-richard.net>

 * encoder*, *contentHandler: added progression notifications.

2005-08-25  Vincent Richard  <vincent@vincent-richard.net>

 * Tests: moved to CppUnit for unit tests framework.

2005-08-23  Vincent Richard  <vincent@vincent-richard.net>

 * All sources: renamed 'vmime::messaging' to 'vmime::net'. An alias has been
   kept for compatibility with previous versions (its use should be considered
   as deprecated).

2005-08-19  Vincent Richard  <vincent@vincent-richard.net>

 * exception.hpp: vmime::exception now inherits from std::exception.

2005-07-25  Vincent Richard  <vincent@vincent-richard.net>

 * Messaging folder: added a FETCH_IMPORTANCE flag to fetch the fields used
   with 'misc::importanceHelper'.

2005-07-23  Vincent Richard  <vincent@vincent-richard.net>

 * POP3, IMAP, maildir: fixed getMessages() when default arguments are given:
   no message were returned, instead of the real message count.

2005-07-15  Vincent Richard  <vincent@vincent-richard.net>

 * *attachment, messageParser: added a getName() parameter to retrieve
   the attachment filename either from the "filename" parameter of the