@@ -85,13 +85,8 @@ void IMAPConnection::connect()
 	const port_t port = GET_PROPERTY(port_t, PROPERTY_SERVER_PORT);
 
 	// Create the time-out handler
-	if (HAS_PROPERTY(PROPERTY_TIMEOUT_FACTORY))
-	{
-		timeoutHandlerFactory* tof = platformDependant::getHandler()->
-			getTimeoutHandlerFactory(GET_PROPERTY(string, PROPERTY_TIMEOUT_FACTORY));
-
-		m_timeoutHandler = tof->create();
-	}
+	if (m_store->getTimeoutHandlerFactory())
+		m_timeoutHandler = m_store->getTimeoutHandlerFactory()->create();
 
 	// Create and connect the socket
 	m_socket = m_store->getSocketFactory()->create();
