@@ -61,8 +61,6 @@ const IMAPServiceInfos::props& IMAPServiceInfos::getProperties() const
 
 		property(serviceInfos::property::SERVER_ADDRESS, serviceInfos::property::FLAG_REQUIRED),
 		property(serviceInfos::property::SERVER_PORT, "143"),
-
-		property(serviceInfos::property::TIMEOUT_FACTORY)
 	};
 
 	static props imapsProps =
@@ -84,8 +82,6 @@ const IMAPServiceInfos::props& IMAPServiceInfos::getProperties() const
 
 		property(serviceInfos::property::SERVER_ADDRESS, serviceInfos::property::FLAG_REQUIRED),
 		property(serviceInfos::property::SERVER_PORT, "993"),
-
-		property(serviceInfos::property::TIMEOUT_FACTORY)
 	};
 
 	return m_imaps ? imapsProps : imapProps;
@@ -117,8 +113,6 @@ const std::vector <serviceInfos::property> IMAPServiceInfos::getAvailablePropert
 
 	list.push_back(p.PROPERTY_SERVER_ADDRESS);
 	list.push_back(p.PROPERTY_SERVER_PORT);
-
-	list.push_back(p.PROPERTY_TIMEOUT_FACTORY);
 
 	return list;
 }
