@@ -62,8 +62,6 @@ public:
 
 		serviceInfos::property PROPERTY_SERVER_ADDRESS;
 		serviceInfos::property PROPERTY_SERVER_PORT;
-
-		serviceInfos::property PROPERTY_TIMEOUT_FACTORY;
 	};
 
 	const props& getProperties() const;
